# Process this file with autoconf to produce a configure script.
AC_INIT(src/adplug.cpp)
AM_INIT_AUTOMAKE(adplug, 1.2)
AM_CONFIG_HEADER(config.h)
AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

# Checks for programs.
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL

AC_SUBST(LIBTOOL_DEPS)

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

# Checks for library functions.
AC_CHECK_FUNCS([memset pow select sqrt strchr strrchr strstr])

AC_OUTPUT([Makefile src/Makefile])
