# Process this file with autoconf to produce a configure script.
AC_INIT([adplug],[1.3])
AC_CONFIG_SRCDIR(src/adplug.cpp)
AC_CONFIG_FILES([Makefile src/Makefile doc/Makefile])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL

AC_SUBST(LIBTOOL_DEPS)

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

# Checks for library functions.

# Checks for commandline parameters
AC_ARG_ENABLE([debug],AC_HELP_STRING([--enable-debug],
[Compile with debug logging support (default is to disable debugging)]),
	AC_DEFINE(DEBUG))

AC_OUTPUT
