# Tell autoconf we're compiling a C++ library, using automake & libtool
AC_INIT(adplug,1.3)
AC_CONFIG_SRCDIR(src/adplug.cpp)
AC_CONFIG_FILES([Makefile src/Makefile doc/Makefile])
AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE
AM_PROG_LIBTOOL
AC_LANG(C++)

# Check for a sane C/C++ build environment.
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_CXX

# Sanitize some compiler features, which may be broken...
AC_C_CONST
AC_C_INLINE

# Enable debugging on user request
AC_ARG_ENABLE([debug],AC_HELP_STRING([--enable-debug],
[Compile with debug logging support (default is to disable debug logging)]),
	AC_DEFINE(DEBUG))

AC_OUTPUT
